--- a/cv11.css
+++ b/cv11.css
@@ -1,8 +1,8 @@
 body{
-    background-color: rgb(85, 79, 79);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    list-style-type: none;
     background-image: url(galaxie.jpg);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    list-style-type: none;
     color: cornsilk;
     margin: 0em;
     padding: 0em;
@@ -12,12 +12,16 @@ body{
 h1
 {
     border: 0.5em cornsilk solid;
-    border-radius: 1em;
     text-align: center;
     -moz-border-raduis: 10px;
     box-shadow: 8px 8px 12px #aaa;
     -moz-box-shadow: 8px 8px 12px #aaa;
-
+    color: blanchedalmond;
+    padding: 3%;
+    width: 80%;
+    margin: 5%;
+    margin-top: 2%;
+    background-image: url(galaxie.jpg);
 }
 #photo
 {
@@ -32,70 +36,45 @@ h1
 #block
 {
     border: 0.5em cornsilk solid;
-    border-radius: 1em;
     text-align: center;
     -moz-border-raduis: 10px;
     box-shadow: 8px 8px 12px #aaa;
     -moz-box-shadow: 8px 8px 12px #aaa;
-    margin-top: 3%;
-    margin-bottom: 2%;
-    margin-left: 3%;
-    margin-right: 5%;
-    background-color: rgb(78, 78, 78);
-    width: 25%;
-    display: flexbox;
-    flex-flow: column;
-    float: left; 
-
-    
-
+    margin: auto;
+    background-color: black;
+    width: 80%;
+    color: white;
 }
 #contact
 {
     
-    margin: 7%;
-    background-color: rgb(78, 78, 78);
+    text-align: center;
 }
 #presentation
 {
     border: 0.5em cornsilk solid;
-    border-radius: 1em;
     text-align: center;
     -moz-border-raduis: 10px;
     box-shadow: 8px 8px 12px #aaa;
     -moz-box-shadow: 8px 8px 12px #aaa;
-    margin: 7%;
-    background-image: url(galaxie.jpg);
-
+    margin-left:15% ;
+    margin-right: 15%;
 }
 #competence
 {
-    
     text-align: center;
     margin: 2%;
-    background-color: rgb(78, 78, 78);
-  
+}
 
-}
-#block2
-{
-    width: 65%;
-    float: right;
-    
-}
 #formation
 {
     border: 0.5em cornsilk solid;
-    border-radius: 1em;
     text-align: left;
     -moz-border-raduis: 10px;
     box-shadow: 8px 8px 12px #aaa;
     -moz-box-shadow: 8px 8px 12px #aaa;
-    margin-top: 3%;
-    margin-bottom: 2%;
-    margin-left: 7%;
-    margin-right: 7%;
-    background-color: rgb(78, 78, 78);
+    margin-right:15%;
+    margin-left:15% ;
     list-style-type: none;
     line-height: 1.7em;
 
@@ -110,21 +89,53 @@ ul
 }
 #experience
 {
-    border: 0.5em cornsilk solid;
-    border-radius: 1em;
     text-align: left;
     -moz-border-raduis: 10px;
-    box-shadow: 8px 8px 12px#aaa ;
-    -moz-box-shadow: 8px 8px 12px #aaa;
-    margin-top: 3%;
-    margin-bottom: 2%;
-    margin-left: 7%;
-    margin-right: 7%;
-    background-color: rgb(78, 78, 78);
-    list-style-type: none;
+    margin-left: 10%;
+    margin-right: 10%;
+   list-style-type: none;
     line-height: 2.3em;
 }
 #experience h2
 {
     text-align: center;
 }
+@media screen and (max-device-width:480px){
+    body
+    {
+        margin: 0;
+    }
+    h1
+    {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        
+    }
+
+    #block
+    {
+        width: 100%;
+        margin: 0%;
+    }
+    #presentation
+    {
+        margin: auto;
+        padding: auto;
+        ;
+    }
+
+
+    #formation
+    {
+        text-align:left;
+        padding: 0;
+        margin: 0;
+    }
+
+    .invisible
+    {
+overflow: scroll;
+    }
+}
+
