--- a/cv11.css
+++ b/cv11.css
@@ -19,12 +19,17 @@ h1
     color: blanchedalmond;
     padding: 3%;
     width: 80%;
-    margin: 5%;
+    margin:auto;
     margin-top: 2%;
     background-image: url(galaxie.jpg);
 }
+h2
+{
+    padding: 3%;
+}
 #photo
 {
+    margin-top: 2%;
     float: left;
 }
 #nom
@@ -32,6 +37,7 @@ h1
     text-align: center;
     font-size: 2.2em;
     font-weight: bolder;
+
 }
 #block
 {
@@ -49,6 +55,8 @@ h1
 {
     
     text-align: center;
+    margin-bottom: 5%;
+    
 }
 #presentation
 {
@@ -63,7 +71,10 @@ h1
 #competence
 {
     text-align: center;
-    margin: 2%;
+    margin-right:15%;
+    margin-left:15% ;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 #formation
@@ -91,8 +102,10 @@ ul
 {
     text-align: left;
     -moz-border-raduis: 10px;
-    margin-left: 10%;
+    margin-left: 15%;
     margin-right: 10%;
+    margin-top: 5%;
+    margin-bottom: 5%;
    list-style-type: none;
     line-height: 2.3em;
 }
@@ -131,11 +144,9 @@ ul
         text-align:left;
         padding: 0;
         margin: 0;
+        
     }
 
-    .invisible
-    {
-overflow: scroll;
-    }
+  
 }
 
